--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -36,11 +36,16 @@ body {
             }
 
             .lgBalls {
-                width: 25px;
-                height: 25px;
-                border-radius: 100%;
+                width: 23px;
+                height: 23px;
+                border-radius: 100px;
                 background-color: #2574ce;
-                margin: 24px auto;
+                margin: 40px auto;
+
+                &.ball2 { background-color: #d554b6; }
+                &.ball3 { background-color: #ffcc2d; }
+                &.ball4 { background-color: #00f3a8; }
+                &.ball5 { background-color: #a396a0; }
             }
         }
     }
